[tool.poetry]
name = "convinced"
version = "0.1.0"
description = ""
authors = ["alexjenkins"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
streamlit = "^1.14.0"
streamlit-lottie = "^0.0.3"
requests = "^2.28.1"
pydantic = "^1.10.2"
openai = "^0.27.2"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
